--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
     "react-chartjs-2": "^5.3.0",
-    "cloudinary": "^1.32.0",
-    "multer": "^1.4.5"
+    "cloudinary": "^1.32.0"
+    
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
