--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
-    "react-chartjs-2": "^5.3.0",
-    "cloudinary": "^1.32.0"
-    
+    "nodemailer": "^7.0.11",
+    "react-chartjs-2": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
