--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.3.3",
     "nodemailer": "^7.0.11",
     "react-chartjs-2": "^5.3.0"
