--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^2.0.2",
     "mysql2": "^3.3.3",
-    "nodemailer": "^7.0.11",
-    "react-chartjs-2": "^5.3.0"
+    "nodemailer": "^7.0.11"
+    
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  }
+  ,
+  "engines": {
+    "node": ">=18"
   }
 }
