--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -20,13 +21,12 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^2.0.2",
     "mysql2": "^3.3.3",
-    "nodemailer": "^7.0.11"
-    
+    "nodemailer": "^7.0.11",
+    "puppeteer": "^24.34.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
-  ,
+  },
   "engines": {
     "node": ">=18"
   }
